# craftworld_cpp_v2

./: CMakeLists.txt  README.md  pyproject.toml
include/craftworld/: craftworld.h
problems/: test_100.txt  test_100_hard.txt
python/: pycraftworld.cpp
python/pycraftworld/: __init__.pyi
scripts/: scenario_create.py
src/: assets_all.inc  craftworld_base.cpp  craftworld_base.h  definitions.h  png_to_byte.py
test/: CMakeLists.txt  test.cpp
