[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pycraftworld"
version = "0.1.0"
description = "Python CraftWorld bindings"
dependencies = ["numpy"]

[tool.scikit-build]
wheel.packages = ["python/pycraftworld"]
build.targets = ["pycraftworld"]
cmake.build-type = "Release"
cmake.args = ["-DCMAKE_CXX_FLAGS='-g -O2 -fno-omit-frame-pointer'"]
cmake.verbose = true
